--- a/src/app/views/partials/side-bar/side-bar.component.html
+++ b/src/app/views/partials/side-bar/side-bar.component.html
@@ -3,7 +3,7 @@
     <a class="sidebar-brand" style="color:#126f8a; background: aliceblue; padding: 10px 20px;" [routerLink]="'business-cards'">
       <span class="align-middle">
         <div class="text-truncate">Startup Weaver</div>
-        <div style="font-size: 12px;">Admin Panel</div>
+        <!-- <div style="font-size: 12px;">Admin Panel</div> -->
       </span>
     </a>
 
