--- a/src/app/views/partials/header/header.component.html
+++ b/src/app/views/partials/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="header">
-  <div class="container">
+  <div style =   "background-color: aquamarine; margin-top: 2px;" class="container">
     <div class="d-flex justify-content-between align-items-center">
       <div class="logo">
-        <h3>Admin Panel</h3>
+        <h3  style = "color:gray ;">Admin Panel</h3>
       </div>
       <div class="user-actions">
         <button class="btn btn-danger" (click)="logout()">
