--- a/src/app/views/pages/users/users.component.css
+++ b/src/app/views/pages/users/users.component.css
@@ -2,12 +2,16 @@
   max-width: 1200px;
 }
 
+  
+
+
 .card {
   border-radius: 10px;
 }
 
 .card-header {
   text-align: center;
+  color: white;
   font-size: 1.2rem;
   font-weight: bold;
 }
