--- a/src/app/views/partials/header/header.component.html
+++ b/src/app/views/partials/header/header.component.html
@@ -1,14 +1,27 @@
 <header class="header">
-  <div style =   "background-color: aquamarine; margin-top: 2px;" class="container">
-    <div class="d-flex justify-content-between align-items-center">
-      <div class="logo">
-        <h3  style = "color:gray ;">Admin Panel</h3>
-      </div>
-      <div class="user-actions">
-        <button class="btn btn-danger" (click)="logout()">
-          <i class="ri-logout-circle-line"></i> Logout
-        </button>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand text-secondary fw-bold" href="#">Admin Panel</a>
+      <button 
+        class="navbar-toggler" 
+        type="button" 
+        data-bs-toggle="collapse" 
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button class="btn btn-danger" (click)="logout()">
+              <i class="ri-logout-circle-line"></i> Logout
+            </button>
+          </li>
+        </ul>
       </div>
     </div>
-  </div>
+  </nav>
 </header>
